--- a/git.css
+++ b/git.css
@@ -6,7 +6,7 @@
 }
 nav{
     width: 100%;
-    background-color: black;
+    background-color: navy;
     flex-wrap: wrap;
     padding: 10px 20px;
     display: flex;
